<resources>
    <string name="app_name">Journal App</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="or">OR</string>
    <string name="update_button">UPDATE</string>
    <string name="submit">SUBMIT</string>
    <string name="new_entry_hint">Enter your feelings and thoughts</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="account_created">User account created</string>
    <string name="account_failuer">Failed to create User account</string>
</resources>
